// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box apply correctly the helpers 1`] = `
<div
  className="margin-t-small bg-brand"
>
  Test
</div>
`;

exports[`Box renders correctly 1`] = `
<div
  className=""
>
  Test
</div>
`;
